feat: implementando busca de informações de filmes usando ia
